# plantpro-cloud

./: .gitlab-ci.yml  Dockerfile  Makefile  README.md  SQL_Commands  dune-project  package.json  plantpro-cloud.opam
Testing/SQL/: TestUsers.py
_build/: .db  .digest-db  _log  log
_build/default/: Dockerfile  README.md  package.json  plantpro.dune-package
_build/default/server/: .merlin  dune  opam
_build/default/server/.PlantPi_server.eobjs/: PlantPi_server.ml.d  db.ml.d  device.ml.d  dune__exe__Db.impl.all-deps  dune__exe__Device.impl.all-deps  dune__exe__PlantPi_server.impl.all-deps  dune__exe__Test_server.impl.all-deps  email.ml.d  encrypt.ml.d  fuck_stdlib.ml.d  group.ml.d  session.ml.d  test_server.ml.d  user.ml.d
_build/default/server/.merlin-conf/: exe-PlantPi_server
_build/default/server/tests/: package.json
_opam/.opam-switch/: environment  switch-config  switch-state
client/: .eslintrc.json  index.html  landing.html  login.html  package.json  signin.html  signup.html  webpack.config.js
client/controlpanel/: allgroups.html  allplants.html  dashboard.html  groupSettings.html  index.html  panel.html  panelbootstrap.html  settings.html  steven-changelog.txt
client/css/: index.css  landing.css
client/login/: index.html  signup.html
client/secure/: panel.html
client/tests/: package.json  (+1 more)
esy.lock/: index.json
extstring/: Extstring.re  dune
ppx_netblob/: README.md  dune  ppx_netblob.ml
server/: .merlin  .msmtprc  Makefile  PlantPi_server.ml  db.ml  device.ml  dune  email.ml  encrypt.ml  fuck_stdlib.ml  group.ml  oauth.ml  opam  session.ml  test_server.ml  user.ml
server/_build/: _digests  _log
server/tests/: test-server.js
(+49 files in other folders)
