opam-version: "1.2"
maintainer: "john.mcalpine@student.nmt.edu"
authors: ["John Christopher McAlpine" "Elias Flores" "Benjamin Fowler"]
license: "MIT"

homepage: "https://git.cs.nmt.edu/PlantPi/cloud-side/"
bug-reports: "https://git.cs.nmt.edu/PlantPi/cloud-side/issues"
dev-repo: "git@git.cs.nmt.edu:PlantPi/cloud-side.git"

build: [ [make "build"] ]

install: [make "install"]

remove: [
        ["ocamlfind" "remove" "plantpi"]
]

build-test: [ [make "check"] ]

depends: [
        "opium"
        "lwt"
        "ppx_deriving_yojson"
        "extlib"
        "calendar"
        "ppx_rapper"
        "cryptokit"
        "base64"
        "ocamlnet"
        "rresult"
        "ocamllint"
]

available: [ocaml-version >= "4.03.0"]
